added TODO list

--- a/notebooks/Rainfall_Duration_Intensity.ipynb
+++ b/notebooks/Rainfall_Duration_Intensity.ipynb
@@ -30,7 +30,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -41,221 +41,141 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data = pd.read_csv('../data/Afiamalu.csv')"
+      "data = pd.read_csv('/Users/nicolasf/Dropbox/Samoa_data/76216_ext_obs_aws.csv', index_col=['lsd'])"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data.head()"
+      "data.columns.tolist()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "html": [
-        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>Node ID</th>\n",
-        "      <th>Logger Name</th>\n",
-        "      <th>Date</th>\n",
-        "      <th>Time</th>\n",
-        "      <th>100cm(AVG)</th>\n",
-        "      <th>10cm(AVG)</th>\n",
-        "      <th>20cm(AVG)</th>\n",
-        "      <th>30cm(AVG)</th>\n",
-        "      <th>BP(AVG)</th>\n",
-        "      <th>External Supply(RAW)</th>\n",
-        "      <th>Gust WD(RAW)</th>\n",
-        "      <th>Gust WS(RAW)</th>\n",
-        "      <th>Leaf Wetness(RAW)</th>\n",
-        "      <th>Mean WD(RAW)</th>\n",
-        "      <th>Mean WS(RAW)</th>\n",
-        "      <th>Rain(TOT)</th>\n",
-        "      <th>RH(AVG)</th>\n",
-        "      <th>SD WD(RAW)</th>\n",
-        "      <th>SD WS(RAW)</th>\n",
-        "      <th>Solar Radiation(AVG)</th>\n",
-        "      <th></th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th>0</th>\n",
-        "      <td>NaN</td>\n",
-        "      <td> Afiamalu AWS</td>\n",
-        "      <td> 02/07/2010</td>\n",
-        "      <td> 10:00:00</td>\n",
-        "      <td> 23.3</td>\n",
-        "      <td> 21.1</td>\n",
-        "      <td> 20.8</td>\n",
-        "      <td> 21.6</td>\n",
-        "      <td> 922.7</td>\n",
-        "      <td> 13424</td>\n",
-        "      <td> 173</td>\n",
-        "      <td> 6.5</td>\n",
-        "      <td> 619</td>\n",
-        "      <td> 162</td>\n",
-        "      <td> 3.3</td>\n",
-        "      <td> 0.0</td>\n",
-        "      <td> 98.8</td>\n",
-        "      <td> 28</td>\n",
-        "      <td> 1.2</td>\n",
-        "      <td> 105.8</td>\n",
-        "      <td>...</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>1</th>\n",
-        "      <td>NaN</td>\n",
-        "      <td> Afiamalu AWS</td>\n",
-        "      <td> 02/07/2010</td>\n",
-        "      <td> 10:10:00</td>\n",
-        "      <td> 24.3</td>\n",
-        "      <td> 21.3</td>\n",
-        "      <td> 21.0</td>\n",
-        "      <td> 22.0</td>\n",
-        "      <td> 936.6</td>\n",
-        "      <td> 13397</td>\n",
-        "      <td> 177</td>\n",
-        "      <td> 9.1</td>\n",
-        "      <td> 593</td>\n",
-        "      <td> 168</td>\n",
-        "      <td> 3.8</td>\n",
-        "      <td> 0.2</td>\n",
-        "      <td> 98.8</td>\n",
-        "      <td> 26</td>\n",
-        "      <td> 1.6</td>\n",
-        "      <td> 109.3</td>\n",
-        "      <td>...</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>2</th>\n",
-        "      <td>NaN</td>\n",
-        "      <td> Afiamalu AWS</td>\n",
-        "      <td> 02/07/2010</td>\n",
-        "      <td> 10:20:00</td>\n",
-        "      <td> 24.3</td>\n",
-        "      <td> 21.4</td>\n",
-        "      <td> 21.1</td>\n",
-        "      <td> 22.0</td>\n",
-        "      <td> 936.6</td>\n",
-        "      <td> 13572</td>\n",
-        "      <td> 190</td>\n",
-        "      <td> 7.3</td>\n",
-        "      <td> 641</td>\n",
-        "      <td> 165</td>\n",
-        "      <td> 3.0</td>\n",
-        "      <td> 0.0</td>\n",
-        "      <td> 98.8</td>\n",
-        "      <td> 33</td>\n",
-        "      <td> 1.2</td>\n",
-        "      <td> 129.4</td>\n",
-        "      <td>...</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>3</th>\n",
-        "      <td>NaN</td>\n",
-        "      <td> Afiamalu AWS</td>\n",
-        "      <td> 02/07/2010</td>\n",
-        "      <td> 10:30:00</td>\n",
-        "      <td> 24.3</td>\n",
-        "      <td> 21.6</td>\n",
-        "      <td> 21.2</td>\n",
-        "      <td> 22.1</td>\n",
-        "      <td> 936.7</td>\n",
-        "      <td> 13559</td>\n",
-        "      <td> 178</td>\n",
-        "      <td> 8.2</td>\n",
-        "      <td> 545</td>\n",
-        "      <td> 165</td>\n",
-        "      <td> 3.5</td>\n",
-        "      <td> 0.2</td>\n",
-        "      <td> 98.5</td>\n",
-        "      <td> 27</td>\n",
-        "      <td> 1.4</td>\n",
-        "      <td> 156.4</td>\n",
-        "      <td>...</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>4</th>\n",
-        "      <td>NaN</td>\n",
-        "      <td> Afiamalu AWS</td>\n",
-        "      <td> 02/07/2010</td>\n",
-        "      <td> 10:40:00</td>\n",
-        "      <td> 24.3</td>\n",
-        "      <td> 22.3</td>\n",
-        "      <td> 21.6</td>\n",
-        "      <td> 22.3</td>\n",
-        "      <td> 936.7</td>\n",
-        "      <td> 13908</td>\n",
-        "      <td> 134</td>\n",
-        "      <td> 8.3</td>\n",
-        "      <td> 599</td>\n",
-        "      <td> 174</td>\n",
-        "      <td> 3.4</td>\n",
-        "      <td> 0.4</td>\n",
-        "      <td> 98.7</td>\n",
-        "      <td> 26</td>\n",
-        "      <td> 1.3</td>\n",
-        "      <td> 309.9</td>\n",
-        "      <td>...</td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "<p>5 rows \u00d7 24 columns</p>\n",
-        "</div>"
-       ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 35,
+       "prompt_number": 7,
        "text": [
-        "   Node ID   Logger Name        Date      Time  100cm(AVG)  10cm(AVG)  \\\n",
-        "0      NaN  Afiamalu AWS  02/07/2010  10:00:00        23.3       21.1   \n",
-        "1      NaN  Afiamalu AWS  02/07/2010  10:10:00        24.3       21.3   \n",
-        "2      NaN  Afiamalu AWS  02/07/2010  10:20:00        24.3       21.4   \n",
-        "3      NaN  Afiamalu AWS  02/07/2010  10:30:00        24.3       21.6   \n",
-        "4      NaN  Afiamalu AWS  02/07/2010  10:40:00        24.3       22.3   \n",
-        "\n",
-        "   20cm(AVG)  30cm(AVG)  BP(AVG)  External Supply(RAW)  Gust WD(RAW)  \\\n",
-        "0       20.8       21.6    922.7                 13424           173   \n",
-        "1       21.0       22.0    936.6                 13397           177   \n",
-        "2       21.1       22.0    936.6                 13572           190   \n",
-        "3       21.2       22.1    936.7                 13559           178   \n",
-        "4       21.6       22.3    936.7                 13908           134   \n",
-        "\n",
-        "   Gust WS(RAW)  Leaf Wetness(RAW)  Mean WD(RAW)  Mean WS(RAW)  Rain(TOT)  \\\n",
-        "0           6.5                619           162           3.3        0.0   \n",
-        "1           9.1                593           168           3.8        0.2   \n",
-        "2           7.3                641           165           3.0        0.0   \n",
-        "3           8.2                545           165           3.5        0.2   \n",
-        "4           8.3                599           174           3.4        0.4   \n",
-        "\n",
-        "   RH(AVG)  SD WD(RAW)  SD WS(RAW)  Solar Radiation(AVG)      \n",
-        "0     98.8          28         1.2                 105.8 ...  \n",
-        "1     98.8          26         1.6                 109.3 ...  \n",
-        "2     98.8          33         1.2                 129.4 ...  \n",
-        "3     98.5          27         1.4                 156.4 ...  \n",
-        "4     98.7          26         1.3                 309.9 ...  \n",
-        "\n",
-        "[5 rows x 24 columns]"
+        "['id',\n",
+        " 'station_no',\n",
+        " 'gmt',\n",
+        " 'lct',\n",
+        " 'insert_datetime',\n",
+        " 'change_datetime',\n",
+        " 'change_user',\n",
+        " 'data_source',\n",
+        " 'qa_flag',\n",
+        " 'measure_period',\n",
+        " 'mn_wind_dir_pt',\n",
+        " 'mn_wind_dir_deg',\n",
+        " 'mn_wind_dir_qa',\n",
+        " 'mn_wind_dir_stddev',\n",
+        " 'mn_wind_dir_stddev_qa',\n",
+        " 'mn_wind_speed',\n",
+        " 'mn_wind_speed_qa',\n",
+        " 'mn_wind_speed_stddev',\n",
+        " 'mn_wind_speed_stddev_qa',\n",
+        " 'mn_gust_speed',\n",
+        " 'mn_gust_speed_qa',\n",
+        " 'mn_gust_time',\n",
+        " 'mn_gust_time_qa',\n",
+        " 'mn_gust_dir_pt',\n",
+        " 'mn_gust_dir_deg',\n",
+        " 'mn_gust_dir_qa',\n",
+        " 'inst_gust_speed',\n",
+        " 'inst_gust_qa',\n",
+        " 'inst_gust_time',\n",
+        " 'inst_gust_time_qa',\n",
+        " 'inst_gust_dir_pt',\n",
+        " 'inst_gust_dir_deg',\n",
+        " 'inst_gust_dir_qa',\n",
+        " 'mn_temp',\n",
+        " 'mn_temp_qa',\n",
+        " 'mn_temp_subaveraging',\n",
+        " 'mn_temp_subaveraging_period',\n",
+        " 'mn_temp_subaveraging_qa',\n",
+        " 'max_temp',\n",
+        " 'max_temp_time',\n",
+        " 'max_temp_time_qa',\n",
+        " 'max_temp_qa',\n",
+        " 'min_temp',\n",
+        " 'min_temp_qa',\n",
+        " 'min_temp_time',\n",
+        " 'min_temp_time_qa',\n",
+        " 'min_grass_temp',\n",
+        " 'min_grass_temp_qa',\n",
+        " 'min_grass_temp_time',\n",
+        " 'min_grass_temp_time_qa',\n",
+        " 'mn_humidity',\n",
+        " 'mn_humidity_qa',\n",
+        " 'max_humidity',\n",
+        " 'max_humidity_qa',\n",
+        " 'max_humidity_time',\n",
+        " 'max_humidity_time_qa',\n",
+        " 'min_humidity',\n",
+        " 'min_humidity_qa',\n",
+        " 'min_humidity_time',\n",
+        " 'min_humidity_time_qa',\n",
+        " 'mn_station_pres',\n",
+        " 'mn_station_pres_qa',\n",
+        " 'mn_sea_level_pres',\n",
+        " 'mn_sea_level_pres_qa',\n",
+        " 'max_pres',\n",
+        " 'max_pres_qa',\n",
+        " 'max_pres_time',\n",
+        " 'max_pres_time_qa',\n",
+        " 'min_pres',\n",
+        " 'min_pres_qa',\n",
+        " 'min_pres_time',\n",
+        " 'min_pres_time_qa',\n",
+        " 'tot_rain',\n",
+        " 'tot_rain_qa',\n",
+        " 'tot_rain_two',\n",
+        " 'tot_rain_two_qa',\n",
+        " 'tot_sun',\n",
+        " 'tot_sun_qa',\n",
+        " 'tot_insolation',\n",
+        " 'tot_insolation_qa',\n",
+        " 'leaf_wetness',\n",
+        " 'leaf_wetness_qa',\n",
+        " 'mn_uv',\n",
+        " 'mn_uv_qa',\n",
+        " 'mn_soil_moisture_10',\n",
+        " 'mn_soil_moisture_10_qa',\n",
+        " 'mn_soil_temp_10',\n",
+        " 'mn_soil_temp_10_qa',\n",
+        " 'mn_soil_moisture_20',\n",
+        " 'mn_soil_moisture_20_qa',\n",
+        " 'mn_soil_temp_20',\n",
+        " 'mn_soil_temp_20_qa',\n",
+        " 'mn_soil_moisture_30',\n",
+        " 'mn_soil_moisture_30_qa',\n",
+        " 'mn_soil_temp_30',\n",
+        " 'mn_soil_temp_30_qa',\n",
+        " 'mn_soil_moisture_50',\n",
+        " 'mn_soil_moisture_50_qa',\n",
+        " 'mn_soil_temp_50',\n",
+        " 'mn_soil_temp_50_qa',\n",
+        " 'mn_soil_moisture_100',\n",
+        " 'mn_soil_moisture_100_qa',\n",
+        " 'mn_soil_temp_100',\n",
+        " 'mn_soil_temp_100_qa']"
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
